--- a/team7-july2020.ipynb
+++ b/team7-july2020.ipynb
@@ -18,9 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Climate change always been acknowledged by the scientific community as one of the critical issues facing mankind. Many companies are built around the idea of preserving an environmental friendly culture, be it on the products and services they offer or the actual raw material used to extend the structure of their company. One thing that has not been of certain yet is what perception other people have on environmental awareness.\n",
+    "Climate change has always been acknowledged by the scientific community as one of the critical issues facing mankind. Many companies are built around the idea of preserving an environmental friendly culture, be it on the products and services they offer or the actual raw material used to extend the structure of their company. One thing that has not been of certain yet is what perception other people have on environmental awareness.\n",
     "\n",
-    "It is of importance to understand public perception of climate change through the use of twitter data. This will allow companies access to a broad base of consumer sentiment thereby increasing their insights for future marketing strategies.\n",
+    "There is an excess of information about climate change on social media platform like Twitter. As such it is difficult for companies to discern the believes of people relating to climate change. Having a machine learning model that is able to classify a person's belief in climate change from historical tweet data, as part of companies research toolset will enable them to better gauge their perception of customers relating to their product and services thereby providing insights beforehand for future marketing strategies.\n",
     "\n",
     "<div align=\"center\" style=\"width: 400px; font-size: 80%; text-align: center; margin: 0 auto\">\n",
     "<img src=\"https://www.iberdrola.com/wcorp/gc/prod/en_US/comunicacion/cambio_climatico_economia_mult_1_res/Cambio_Climatico_Economia_746x419.jpg\"\n",
