--- a/team7-july2020.ipynb
+++ b/team7-july2020.ipynb
@@ -62,12 +62,46 @@
     "    2  Loading of Dataset\n",
     "       2.1 General Overview of Dataset\n",
     "       2.1.1 Data Summary\n",
+    "       2.1.2 Data Types\n",
     "    3. Data Preprocessing\n",
-    "    4. Exploratory Data Analysis\n",
-    "    5. Feature Enginering\n",
-    "    6. Model Building\n",
+    "       3.1 Noise Removal/Text Cleaning\n",
+    "           3.1.1 Tweets Cleaning\n",
+    "           3.1.2 Extraction of Emojis\n",
+    "           3.1.3 Defining Abbreviations\n",
+    "           3.1.4 Contraction Function\n",
+    "           3.1.5 Abbrevation Removal\n",
+    "           3.1.6 Punctuation Removal\n",
+    "           3.1.7 Tokenization\n",
+    "           3.1.8 Lexicon Normalization\n",
+    "           3.1.9 Stemming\n",
+    "           3.1.10 Lemmatization\n",
+    "           3.1.11 Stop Words\n",
     "\n",
-    "\n"
+    "    4. Exploratory Data Analysis¶\n",
+    "       4.1 Analysis of Target Variable\n",
+    "       4.2 Duplicate Tweets\n",
+    "       4.3 Most Occuring Words by Sentiment\n",
+    "       4.4 Exploring Tweeter Handles\n",
+    "       4.5 Hashtag Analysis\n",
+    "           4.5.1 Top 10 Common Hashtags Overall\n",
+    "           4.5.2 Plotting Top 20 Hashtags for Negative Sentiments\n",
+    "           4.5.3 Plotting Top 20 Hashtags for Positive Sentiments\n",
+    "           4.5.4 Plotting Top 20 Hashtags for Neutral Sentiments\n",
+    "           4.5.5 Plotting Top 20 Hashtags for News Sentiments\n",
+    "       4.6 Retweets Analysis\n",
+    "       4.7 Emoji Analysis\n",
+    "    5. Feature Enginering\n",
+    "       5.1 Splitting out the X variable from the target\n",
+    "       5.2 Conversion of Tweets Texts to Numerical\n",
+    "       5.3 Class Imbalance\n",
+    "       5.4 Splitting of Training and Validation Sets\n",
+    "    6. Model Building\n",
+    "       6.1 Train Cross Validation\n",
+    "       6.2 Hyperparameter Tuning\n",
+    "       6.3 Creating Pickle File\n",
+    "    7. Submission\n",
+    "    8. Conclusion\n",
+    "    9. References"
    ]
   },
   {
@@ -3468,7 +3502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Splitting out the X variable from the target\n",
+    "## 5.1 Splitting out the X variable from the target\n",
     "\n",
     "We are splitting the **'sentiment'** column, which represents the dependent variable (y) and the newly created feature, **'cleaned_message'**, which represents the independent variable."
    ]
@@ -3487,7 +3521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conversion of Tweets Texts to Numerical\n",
+    "## 5.2 Conversion of Tweets Texts to Numerical\n",
     "\n",
     "We applied vectorisation to the tweet dataset. This is a process of converting texts into numerical features.\n",
     "\n",
@@ -3555,7 +3589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Class Imbalance"
+    "## 5.3 Class Imbalance"
    ]
   },
   {
@@ -3624,7 +3658,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Splitting of Training and Validation Sets\n",
+    "## 5.4 Splitting of Training and Validation Sets\n",
+    "\n",
     "Training Data: This is the dataset that contains the known labels. The model is trained on this data to be able to generalize unlabeled data.\n",
     "\n",
     "Validation Data: This is a subset of the training data that is used to assess how well the algorithm was trained on the training data.\n",
@@ -3649,17 +3684,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Building"
+    "# 6. Model Building"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "Train Cross Validation"
-   ]
+    "## 6.1 Train Cross Validation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -3797,7 +3830,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hyperparameter Tuning\n",
+    "## 6.2 Hyperparameter Tuning\n",
     "\n",
     "Hyperparameter tuning was performed on the two best performing models from the cross-validation. These are the LinearSVC and ComplementNB, both of which are known to perform well with unbalanced classes which is a feature of the current dataset.\n",
     "\n",
@@ -4038,7 +4071,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating Pickle File"
+    "## 6.3 Creating Pickle File"
    ]
   },
   {
@@ -4057,7 +4090,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Submission"
+    "# 7. Submission"
    ]
   },
   {
@@ -4073,7 +4106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion"
+    "# 8. Conclusion"
    ]
   },
   {
@@ -4085,7 +4118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# References"
+    "# 9. References"
    ]
   },
   {
@@ -4113,7 +4146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
