--- a/team7-july2020.ipynb
+++ b/team7-july2020.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is an excess of information about climate change on social media platforms like Twitter. As such it is difficult for companies to discern the beliefs of people relating to climate change.  Having a robust machine learning model that is able to classify a person's belief in climate change from historical tweet data, as part of companies toolset will enable them to better gauge their perception of customers relating to their products and services."
+    "There is an excess of information about climate change on social media platforms like Twitter. As such it is difficult for companies to discern the beliefs of people relating to climate change.  Having a robust machine learning model that is able to classify a person's belief in climate change from historical tweet data, as part of companies research toolset will enable them to better gauge their perception of customers relating to their products and services."
    ]
   },
   {
