--- a/team7-july2020.ipynb
+++ b/team7-july2020.ipynb
@@ -2343,7 +2343,7 @@
     "                         figsize=(10, 6),\n",
     "                         dpi=100)\n",
     "#sns.countplot(train_eda['sentiment'], ax=axes[0])\n",
-    "\n",
+    "labels=['Pro', 'News', 'Neutral', 'Anti']\n",
     "axes.pie(train_eda['sentiment'].value_counts(),\n",
     "            autopct='%1.0f%%',\n",
     "            labels=labels,\n",
@@ -3181,7 +3181,7 @@
     "# the key as x-axis and count\n",
     "ax = sns.barplot(data=hashtag, x=\"Count\", y=\"News\", palette=\"hls\")\n",
     "ax.set(ylabel='')  # remove the label for the y-axis\n",
-    "plt.title(\"Top 10 News Hashtags\")  # create a title for the chart\n",
+    "plt.title(\"Top 20 News Hashtags\")  # create a title for the chart\n",
     "plt.xlabel(\"Count of Hashtags\")  # Define a label for x-axis\n",
     "plt.xticks(rotation=90)  # change the X labels rotated to 90 degrees\n",
     "plt.show()  # display the chart\n"
@@ -3376,7 +3376,7 @@
     "# creating a dataframe of count of tweets and count of retweets\n",
     "sentiment_classes = ['Pro', 'News', 'Neutral', 'Anti']\n",
     "tweets_df = pd.DataFrame({'Sentiment class': sentiment_classes,\n",
-    "                          'Count': tweets_count})\n",
+    "                          'Count': tweets_counts})\n",
     "retweets_df = pd.DataFrame({'Sentiment class': sentiment_classes,\n",
     "                            'Count': retweets_counts})\n",
     "combined_count = pd.concat([tweets_df, retweets_df],\n",
@@ -4084,6 +4084,18 @@
     "model_save_path = \"team7_vectorizer.pkl\"\n",
     "with open(model_save_path, 'wb') as file:\n",
     "    pickle.dump(vectorizer, file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "model_save_path = \"team7_linear_svc_model.pkl\"\n",
+    "with open(model_save_path, 'wb') as file:\n",
+    "    pickle.dump(linearsvc, file)\n"
    ]
   },
   {
