--- a/team7-july2020.ipynb
+++ b/team7-july2020.ipynb
@@ -2529,7 +2529,7 @@
    "source": [
     "## Observations \n",
     "\n",
-    "From the above visual we can see that from the positive tweets sentiments , we find the most duplicated tweets. This is problematic when it comes to analysis. This means that we have to clean all the duplicated data for a more accurate data analysis"
+    "From the above visual we can see that from the positive tweets sentiments, we find the most duplicated tweets. This is problematic when it comes to analysis. This means that we have to clean all the duplicated data for a more accurate data analysis."
    ]
   },
   {
@@ -2652,7 +2652,9 @@
    "source": [
     "## Observations\n",
     "\n",
-    "This visual helps us analyse which words from different sentiments are the most occuring. This will give the company the most a better understanding as to what they are dealing with in terms of people's sentiments and therefore be better equipped to deal with the issue at hand. And as we can see the most occuring words are \"climate\",\"Donald Trump\" and \"Global warming\"."
+    "This visual helps us analyse which words from different sentiments are the most occuring. This will give the company a better understanding as to what they are dealing with in terms of people's sentiments and therefore be better equipped to deal with the issue at hand. And as we can see the most occuring words are \"climate\",\"Donald Trump\" and \"Global warming\".\n",
+    "\n",
+    "We can also see in the Anti-climate change tweets, words like Hoax, Scam, Fake, Fraud depicts the characteristics of negativity."
    ]
   },
   {
@@ -2784,7 +2786,7 @@
    "source": [
     "## Observations \n",
     "\n",
-    "For this visual the focus was on analysing the tweet handles that express the most sentiments. As we can see from all given sentiments type we see that most tweeter handles share sentiments about about Donald Trump and this gives the problem state a more concise focus on the issue at hand."
+    "For this visual the focus was on analysing the tweet handles that express the most sentiments. As we can see from all given sentiments type we see that most tweeter handles share sentiments about Donald Trump and this gives the problem statement a more concise focus on the issue at hand.\n"
    ]
   },
   {
@@ -2877,8 +2879,11 @@
     "**Observations**\n",
     "\n",
     "The most common hashtags are centred around climate change and politics.\n",
+    "\n",
     "#beforetheflood: Reference to Climate Change documentary with Leonardo DiCaprio\n",
+    "\n",
     "#cop22: Reference to 2016 United Nations Climate Change Conference\n",
+    "\n",
     "#parisagreement: Reference to the Paris Agreement within the United Nations Framework Convention on Climate Change signed in 2016."
    ]
   },
