--- a/team7-july2020.ipynb
+++ b/team7-july2020.ipynb
@@ -3773,6 +3773,13 @@
    ]
   },
   {
+   "source": [
+    "### 6.1.1 Linear Support Vector Classifier"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 578,
    "metadata": {},
@@ -3816,6 +3823,39 @@
     "print('F1: {}'.format(f1_score(y_val, y_pred, average='macro')))\n",
     "print('\\n' + classification_report(y_val, y_pred))\n"
    ]
+  },
+  {
+   "source": [
+    "### 6.1.2 Complement Naive Bayes"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Complement Naive Bayes\n",
+    "cnb = ComplementNB()\n",
+    "cnb.fit(X_train, y_train)\n",
+    "y_pred = cnb.predict(X_val)\n",
+    "\n",
+    "print('Getting the Best Model Performance' + '\\n')\n",
+    "print('Accuracy: {}'.format(accuracy_score(y_val, y_pred)))\n",
+    "print('Precision: {}'.format(precision_score(y_val, y_pred, average='macro')))\n",
+    "print('Recall: {}'.format(recall_score(y_val, y_pred, average='macro')))\n",
+    "print('F1: {}'.format(f1_score(y_val, y_pred, average='macro')))\n",
+    "print('\\n' + classification_report(y_val, y_pred))\n"
+   ]
+  },
+  {
+   "source": [
+    "### 6.1.3 K-Nearest Neighbour"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
