--- a/team7-july2020.ipynb
+++ b/team7-july2020.ipynb
@@ -296,11 +296,9 @@
    "outputs": [],
    "source": [
     "# importing the dataset \n",
-    "train = pd.read_csv('C:/Users/Admin/Downloads/Explore Data Science Academy/Class Begins/Machine Learning/Classification/Predict/train.csv')\n",
-    "#train = pd.read_csv('../input/climate-change-edsa2020-21/train.csv')\n",
-    "test = pd.read_csv('C:/Users/Admin/Downloads/Explore Data Science Academy/Class Begins/Machine Learning/Classification/Predict/test.csv')\n",
-    "#test = pd.read_csv('../input/climate-change-edsa2020-21/test.csv')\n",
-    "sample_submission = pd.read_csv('C:/Users/Admin/Downloads/Explore Data Science Academy/Class Begins/Machine Learning/Classification/Predict/sample_submission.csv')\n"
+    "train = pd.read_csv('../input/climate-change-edsa2020-21/train.csv')\n",
+    "test = pd.read_csv('../input/climate-change-edsa2020-21/test.csv')\n",
+    "sample_submission = pd.read_csv('../input/climate-change-edsa2020-21/sample_submission.csv')\n"
    ]
   },
   {
@@ -4214,7 +4212,10 @@
    "metadata": {},
    "source": [
     "1. https://www.analyticsvidhya.com/blog/2017/01/ultimate-guide-to-understand-implement-natural-language-processing-codes-in-python/ ...SHIVAM BANSAL\n",
-    "\n"
+    "\n",
+    "2. Bowman, K. (n.d.). Democrats And Republicans Divided On Climate Change. [online] Forbes. Available at: https://www.forbes.com/sites/bowmanmarsico/2019/04/19/democrats-and-republicans-divided-on-climate-change/#67dc91163198 [Accessed 19 Jun. 2020].\n",
+    "\n",
+    "3. The Independent. (2019). More than half of people say climate change will influence how they vote in general election. [online] Available at: https://www.independent.co.uk/environment/climate-change-crisis-latest-general-election-green-party-vote-boris-johnson-a9175756.html [Accessed 19 Jun. 2020].\n"
    ]
   }
  ],
